--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-neat": "^1.0.9",
+    "hexo-optimize": "^2.5.1",
     "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.3.0",
