--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
-  "routes": [
+  "headers": [
     {
-      "headers": { "strict-transport-security": "max-age=31536000; includeSubDomains; preload" },
+      "source": "/(.*)",
+      "headers" : [
+        {
+          "key" : "strict-transport-security",
+          "value" : "max-age=31536000; includeSubDomains; preload"
+        }
+      ]
     }
   ]
 }
