--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "hexo-theme-next": "^8.1.0",
     "hexo-word-counter": "0.0.2",
     "prism-themes": "^1.5.0"
+  },
+  "devDependencies": {
+    "cryptiles": "^4.1.3",
+    "request": "^2.88.2",
+    "hoek": "^6.1.3"
   }
 }
