--- a/_config.next.yml
+++ b/_config.next.yml
@@ -142,7 +142,7 @@ site_state: true
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
   GitHub: https://github.com/bmyjacks || fab fa-github
-  E-Mail: mailto:support@bmyjacks.cn || fa fa-envelope
+  E-Mail: mailto:bmyjacks@bmyjacks.io || fa fa-envelope
   #RSS: /atom.xml || fa fa-rss
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
@@ -202,7 +202,7 @@ language_switcher: false
 
 footer:
   # Specify the year when the site was setup. If not defined, current year will be used.
-  #since: 2020
+  since: 2020
 
   # Icon between year and copyright info.
   icon:
